<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="addMagicTransition">addMagicTransition</string>
    <string name="akinator_app_name">Akinator</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">Akinator FREE</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appconsent_accept_all_button">Accept all</string>
    <string name="appconsent_action_profile">profile</string>
    <string name="appconsent_application_examples">Examples of usage</string>
    <string name="appconsent_configuration_display_all_partners">All partners</string>
    <string name="appconsent_consentable_details_dialog_close_button">Close</string>
    <string name="appconsent_consentable_details_dialog_message">Some companies may collect and process your personal data because they are acting in their legitimate interest. This is a lawful processing that is indispensable to their activities.\n\nNevertheless, you can oppose such processing by clicking on the \"Object\" button.</string>
    <string name="appconsent_consentable_details_label_1">This purpose is ensured by the following partners, subject to consent</string>
    <string name="appconsent_consentable_details_label_2">The following partners are subject to the legitimate interest</string>
    <string name="appconsent_consentable_details_label_3">This purpose is ensured by the following partners</string>
    <string name="appconsent_consentable_details_privacy">Privacy policy</string>
    <string name="appconsent_consentable_details_see_all_number">(%d)</string>
    <string name="appconsent_consentable_list_bar_title">Preferences on the use of your data</string>
    <string name="appconsent_consentable_list_information">See details</string>
    <string name="appconsent_consentable_list_label_extra">Specific use cases</string>
    <string name="appconsent_consentable_list_label_feature">Set up the technical means of collection</string>
    <string name="appconsent_consentable_list_label_purpose">Authorize or refuse the collection of your data for the following purposes:</string>
    <string name="appconsent_consentable_list_refine_vendor">Refine by partner</string>
    <string name="appconsent_consentable_list_see_mandatory_feature">See mandatory features</string>
    <string name="appconsent_consentable_list_see_mandatory_purpose">See mandatory purposes</string>
    <string name="appconsent_continue_without_accepting_button">Continue without accepting</string>
    <string name="appconsent_copyright_version_p">© SFBX Version %1s</string>
    <string name="appconsent_deny_all_button">Refuse all</string>
    <string name="appconsent_display_by_vendor_iab_tab">IAB partners</string>
    <string name="appconsent_display_by_vendor_other_tab">Other partners</string>
    <string name="appconsent_display_by_vendor_tab_counter">(%d)</string>
    <string name="appconsent_geoloc_subtitle">Choose the right balance for your data</string>
    <string name="appconsent_geolocation_footer">Modification of choices available at any time</string>
    <string name="appconsent_geolocation_notice_message">Our application is free of charge because it is financed by advertising.</string>
    <string name="appconsent_geolocation_notice_message_more">Your geolocation data and your phone\'s advertising ID are used to let you know what offers are available around you. Your choice will not affect the number of ads you see, but the content.</string>
    <string name="appconsent_geolocation_notice_title">Allow or refuse geolocation</string>
    <string name="appconsent_introduction_configure_button">Configure</string>
    <string name="appconsent_introduction_description">Your datas are informations that you leave behind while browsing, such as your searches, or informations you enter in a form, as well as your precise geolocation. We and our partners may use these informations to provide you with personalized content and advertising, measure performance and improve products. In order to do this, cookies or equivalent technologies are used to store and access your data.</string>
    <string name="appconsent_introduction_detail">For more information, see our privacy policy. Modification of choices available at any time from the application settings.</string>
    <string name="appconsent_introduction_example_usage_purpose_data_processing">Purposes of the data processing</string>
    <string name="appconsent_introduction_example_usage_purpose_data_processing_accessibility">Purposes for which your data is processed, button with embedded content, click to access the list</string>
    <string name="appconsent_introduction_example_usage_technical_means_collection">Technical means of collection</string>
    <string name="appconsent_introduction_example_usage_use_of_your_data">Uses of your data</string>
    <string name="appconsent_introduction_title">Make a choice for your data</string>
    <string name="appconsent_learn_more_button">See details</string>
    <string name="appconsent_mandatory_feature_bar_title">Mandatory features</string>
    <string name="appconsent_mandatory_feature_header">Some companies may collect and process your personal data because they are acting in their legitimate interest. This is a lawful processing that is indispensable to their activities.\n\nYour consent is not required.</string>
    <string name="appconsent_mandatory_purpose_bar_title">Mandatory purposes</string>
    <string name="appconsent_mandatory_purpose_header">Some companies may collect and process your personal data because they are acting in their legitimate interest. This is a lawful processing that is indispensable to their activities.\n\nYour consent is not required.</string>
    <string name="appconsent_notice_global_switch">Refuse all / Accept all</string>
    <string name="appconsent_save_button">Save</string>
    <string name="appconsent_see_less_button">See less</string>
    <string name="appconsent_see_more_button">See more</string>
    <string name="appconsent_success_button_close">Close</string>
    <string name="appconsent_success_subtitle">Your preferences have been saved.</string>
    <string name="appconsent_success_text">You can change them at any time. To access them, go to the application settings.</string>
    <string name="appconsent_success_title">Congratulations !</string>
    <string name="appconsent_user_id_copy">Copy</string>
    <string name="appconsent_user_id_description">It serves as a reference for the platform to find the history of your consents.</string>
    <string name="appconsent_user_id_title">My privacy ID (UUID)</string>
    <string name="appconsent_v3_qr_code">QR code</string>
    <string name="appconsent_v3_qr_code_error_loading">Unable to display QR code</string>
    <string name="appconsent_v3_qr_code_open_camera_and_point_at_code">Open your phone\'s camera and point it at the code</string>
    <string name="appconsent_v3_qr_code_to_visit_url_website">QR code to visit the site URL</string>
    <string name="appconsent_vendor_categories_title">Categories of data collected</string>
    <string name="appconsent_vendor_consentable_type_and_retention">%1$s | %2$s</string>
    <string name="appconsent_vendor_details_label_1">Subject to consent</string>
    <string name="appconsent_vendor_details_label_2">Subject to legitimate interest, with right to object</string>
    <string name="appconsent_vendor_details_label_3">Mandatory for proper operation</string>
    <string name="appconsent_vendor_details_object">Object</string>
    <string name="appconsent_vendor_details_privacy">Access the privacy policy &gt;</string>
    <string name="appconsent_vendor_details_type_feature">Feature</string>
    <string name="appconsent_vendor_details_type_purpose">Purpose</string>
    <string name="appconsent_vendor_details_type_retention_delay_less_than_one_day">Data retention period of less than one day</string>
    <string name="appconsent_vendor_details_type_retention_delay_more_than_one_day">Data retention period of %1d days</string>
    <string name="appconsent_vendor_details_type_stack">Stack</string>
    <string name="appconsent_vendor_details_type_unknown">Unknown</string>
    <string name="appconsent_vendor_legitimate_interest">Clarification of legitimate interest</string>
    <string name="appconsent_vendor_list_global">List of partners</string>
    <string name="appconsent_vendor_list_legitimate">The following partners are subject to the legitimate interest</string>
    <string name="appconsent_vendor_privacy_policy">Privacy policy</string>
    <string name="appconsent_vendors_refine_header">Refine by partner</string>
    <string name="appconsent_webview_ssl_error_message">Click on %1s to load the page</string>
    <string name="appconsent_webview_ssl_error_title">SSL certificate invalid</string>
    <string name="applovin_agree_message">Please press \"Continue\" if you choose to start using our app.</string>
    <string name="applovin_alt_privacy_policy_text" />
    <string name="applovin_continue_button_text">Continue</string>
    <string name="applovin_creative_debugger_disabled_text">Enable the Creative Debugger SDK settings in order to view recent ads.</string>
    <string name="applovin_creative_debugger_no_ads_text">No recently displayed ads found.</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="applovin_pp_and_tos_title">To use %s you must agree to our Terms &amp; Conditions and affirm you have reviewed our Privacy Policy</string>
    <string name="applovin_pp_title">To use %s you must affirm that you have reviewed and acknowledged our Privacy Policy.</string>
    <string name="applovin_privacy_policy_text">Privacy Policy</string>
    <string name="applovin_terms_of_service_text">Terms &amp; Conditions</string>
    <string name="applovin_terms_of_use_text">Terms of Use</string>
</resources>