<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_geolocation_header"
        android:visibility="invisible"
        android:layout_width="@dimen/appconsent_v3_image_size_xl"
        android:layout_height="@dimen/appconsent_v3_image_size_xl"
        android:layout_marginTop="@dimen/appconsent_v3_margin_small"
        android:scaleType="fitCenter"
        android:layout_marginStart="@dimen/appconsent_v3_margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_title"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_subtitle"
        android:background="@android:color/transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/appconsent_v3_margin_small"
        android:text="@string/appconsent_geoloc_subtitle"
        android:layout_marginStart="@dimen/appconsent_v3_margin_small"
        android:layout_marginEnd="@dimen/appconsent_v3_margin_small"
        app:layout_constraintStart_toEndOf="@+id/image_geolocation_header"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AppConsentV3Theme.TextView.Label"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_title"
        android:background="@android:color/transparent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/appconsent_geolocation_notice_title"
        android:layout_marginStart="@dimen/appconsent_v3_margin_small"
        android:layout_marginEnd="@dimen/appconsent_v3_margin_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_geolocation_header"
        app:layout_constraintTop_toBottomOf="@+id/text_subtitle"
        style="@style/AppConsentV3Theme.TextView.Title"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_message"
        android:background="@android:color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/appconsent_v3_margin_small"
        android:text="@string/appconsent_geolocation_notice_message"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        style="@style/AppConsentV3Theme.TextView.Description"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/appconsent_v3_text_size_textview_large"
        android:id="@+id/text_see_more"
        android:background="@android:color/transparent"
        android:paddingTop="@dimen/appconsent_v3_padding_large"
        android:paddingBottom="@dimen/appconsent_v3_padding_large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appconsent_see_more_button"
        android:paddingStart="@dimen/appconsent_v3_padding_large"
        android:paddingEnd="@dimen/appconsent_v3_padding_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_message"
        style="@style/AppConsentV3Theme.TextButton"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_message_hidden"
        android:background="@android:color/transparent"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/appconsent_geolocation_notice_message_more"
        android:layout_marginStart="@dimen/appconsent_v3_margin_small"
        android:layout_marginEnd="@dimen/appconsent_v3_margin_small"
        app:layout_constraintTop_toBottomOf="@+id/text_see_more"
        style="@style/AppConsentV3Theme.TextView.Description"/>
</androidx.constraintlayout.widget.ConstraintLayout>
