<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/appconsent_v3_background_vendor_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appconsent_clear_notice_user_image_close"
            android:background="?android:attr/selectableItemBackground"
            android:paddingTop="@dimen/appconsent_v3_padding_large"
            android:paddingBottom="@dimen/appconsent_v3_padding_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/appconsent_v3_padding_xxl"
            android:paddingEnd="@dimen/appconsent_v3_padding_xxl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/appconsent_ic_v3_close"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center"
            android:id="@+id/appconsent_clear_notice_user_text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/appconsent_user_id_title"
            android:layout_marginStart="@dimen/appconsent_v3_margin_xl"
            android:layout_marginEnd="@dimen/appconsent_v3_margin_xl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appconsent_clear_notice_user_image_close"
            style="@style/AppConsentV3Theme.TextView.Title"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:gravity="center"
            android:id="@+id/appconsent_clear_notice_user_text_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appconsent_v3_margin_large"
            android:text="@string/appconsent_user_id_description"
            android:layout_marginStart="@dimen/appconsent_v3_margin_xl"
            android:layout_marginEnd="@dimen/appconsent_v3_margin_xl"
            app:layout_constraintTop_toBottomOf="@+id/appconsent_clear_notice_user_text_title"
            style="@style/AppConsentV3Theme.TextView.SmallDescription"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/appconsent_v3_text_size_textview_small"
            android:gravity="center"
            android:id="@+id/appconsent_clear_notice_user_text_uuid"
            android:background="@drawable/appconsent_v3_background_uuid_textview"
            android:paddingTop="@dimen/appconsent_v3_padding_large"
            android:paddingBottom="@dimen/appconsent_v3_padding_large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appconsent_v3_margin_xl"
            android:paddingStart="@dimen/appconsent_v3_padding_small"
            android:paddingEnd="@dimen/appconsent_v3_padding_small"
            android:layout_marginStart="@dimen/appconsent_v3_margin_xl"
            android:layout_marginEnd="@dimen/appconsent_v3_margin_xl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appconsent_clear_notice_user_text_description"
            style="@style/AppConsentV3Theme.TextView"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:textColor="@color/appconsent_v3_blue"
            android:gravity="center"
            android:id="@+id/appconsent_clear_notice_user_text_copy"
            android:background="?android:attr/selectableItemBackground"
            android:padding="@dimen/appconsent_v3_padding_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/appconsent_v3_margin_large"
            android:layout_marginBottom="@dimen/appconsent_v3_margin_xl"
            android:text="@string/appconsent_user_id_copy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appconsent_clear_notice_user_text_uuid"
            style="@style/AppConsentV3Theme.TextView.SemiBold"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
